--- a/lab2/task4/app/src/main/res/layout/activity_main.xml
+++ b/lab2/task4/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,140 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <TableLayout
+        android:id="@+id/tableLayout"
+        android:layout_width="410dp"
+        android:layout_height="404dp"
+        android:paddingLeft="20sp"
+        android:paddingRight="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <Button
+                android:id="@+id/button4"
+                style="@style/button_style"
+                android:text="@string/button_placeholder" />
+
+            <Button
+                android:id="@+id/button3"
+                style="@style/button_style"
+                android:text="@string/button_placeholder" />
+
+            <Button
+                android:id="@+id/button2"
+                style="@style/button_style"
+                android:text="@string/button_placeholder" />
+
+            <Button
+                android:id="@+id/button"
+                style="@style/button_style"
+                android:text="@string/button_placeholder" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <Button
+                android:id="@+id/button8"
+                style="@style/button_style"
+                android:text="@string/button_placeholder" />
+
+            <Button
+                android:id="@+id/button7"
+                style="@style/button_style"
+                android:text="@string/button_placeholder" />
+
+            <Button
+                android:id="@+id/button6"
+                style="@style/button_style"
+                android:text="@string/button_placeholder" />
+
+            <Button
+                android:id="@+id/button5"
+                style="@style/button_style"
+                android:text="@string/button_placeholder" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <Button
+                android:id="@+id/button12"
+                style="@style/button_style"
+                android:text="@string/button_placeholder" />
+
+            <Button
+                android:id="@+id/button11"
+                style="@style/button_style"
+                android:text="@string/button_placeholder" />
+
+            <Button
+                android:id="@+id/button10"
+                style="@style/button_style"
+                android:text="@string/button_placeholder" />
+
+            <Button
+                android:id="@+id/button9"
+                style="@style/button_style"
+                android:text="@string/button_placeholder" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <Button
+                android:id="@+id/button16"
+                style="@style/button_style"
+                android:text="@string/button_placeholder" />
+
+            <Button
+                android:id="@+id/button15"
+                style="@style/button_style"
+                android:text="@string/button_placeholder" />
+
+            <Button
+                android:id="@+id/button14"
+                style="@style/button_style"
+                android:text="@string/button_placeholder" />
+
+            <Button
+                android:id="@+id/button13"
+                style="@style/button_style"
+                android:text="@string/button_placeholder" />
+        </TableRow>
+    </TableLayout>
+
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="15dp"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/restart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="@string/restart_button_caption"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
