--- a/lab2/task4/app/src/main/res/values/styles.xml
+++ b/lab2/task4/app/src/main/res/values/styles.xml
@@ -7,4 +7,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="button_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_margin">10sp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:onClick">processClick</item>
+    </style>
+
 </resources>
